--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,9 @@
             "email": "maxstarkenburg@gmail.com",
             "homepage": "https://maxwell.fyi"
         }
-    ]
+    ],
+    "require": {
+        "composer-plugin-api": "^1.0 || ^2.0"
+    },
 }
 
