--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         }
     ],
     "require": {
+        "composer/installers": "^1.9",
         "composer-plugin-api": "^1.0 || ^2.0"
     }
 }
