--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "maxstarkenburg/git-testing",
     "description": "Testing a git repo as a composer dependency",
+    "type": "drupal-module",
     "authors": [
         {
             "name": "Max Starkenburg",
