Adding a "branch-alias" in "extras" to the composer.json of my required package/repo.

--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,11 @@
             "email": "maxstarkenburg@gmail.com",
             "homepage": "https://maxwell.fyi"
         }
-    ]
+    ],
+    "extra": {
+        "branch-alias": {
+            "dev-primary": "1.0.x-dev"
+        }
+    }
 }
 
